Fixes scroll background image not covering full height
People's Choice Case Study. ticket #40

https://evanshunt.atlassian.net/browse/E2WU-140

--- a/styles/components/animated-screen-scroll.scss
+++ b/styles/components/animated-screen-scroll.scss
@@ -8,7 +8,7 @@ Overrides can be specified by filling in the "AdditionalClass" field in Contentf
   .background-image {
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-size: 100% auto;
+    background-size: cover;
     width: 100%;
     min-height: 170px;
     display: flex;
